--- a/file-transfer-camel/pom.xml
+++ b/file-transfer-camel/pom.xml
@@ -28,6 +28,34 @@
     <artifactId>slf4j-simple</artifactId>
     <version>2.0.7</version>
   </dependency>
+
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jdbc</artifactId>
+        <version>3.20.2</version>
+    </dependency>
+
+    <!-- PostgreSQL JDBC Driver -->
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.7.1</version>
+    </dependency>
+
+    <!-- Apache Commons DBCP2 (para BasicDataSource) -->
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-dbcp2</artifactId>
+        <version>2.9.0</version>
+    </dependency>
+
+  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.7.36</version>
+  </dependency>
+
+
 </dependencies>
 <build>
   <plugins>
